# AI-Education

./: .env-sample  .gitignore  Windows AI 개발 환경 설치 가이드(uv).md  macOS AI 개발 환경 설치 가이드.md  pyproject.toml
3.first/prompts/: 1.first app.txt  3.chatbot.txt  4.internet.txt  5.rag.txt
4.ref/prompts/: debate.txt  deep_research.txt  ref.txt
5.DatabaseSQL/data/: 2025년 10월 주요생필품 동향대전시 총괄.xlsx  2025년 11월 주요생필품 동향대전시 총괄.xlsx  2025년 5월 주요생필품 동향대전시 총괄.xlsx  2025년 6월 주요생필품 동향대전시 총괄.xlsx  2025년 7월 주요생필품 동향대전시 총괄.xlsx  2025년 8월 주요생필품 동향대전시 총괄.xlsx  2025년 9월 주요생필품 동향대전시 총괄.xlsx  daejeon_price_merged_old.csv
5.DatabaseSQL/prompts/: DB 구축.txt  DB 분석 프로그램.txt  SQL Agent.txt  merge-excels.txt  supabase 테이블 생성.sql
6.OllamaRAG/prompts/: rag-ollama.txt  실행파일-생성.txt
7.MultiService/prompts/: 멀티세션 ref.txt  멀티유저 ref.txt  멀티유저 멀티세션 저장기능 챗봇2.txt
8.STT/prompts/: STT 테스트.txt  회의 음성 예시.txt  회의록 자동 생성 (녹음).txt  회의록 자동 생성.txt
9.OpenAPI/data/: DART_API_GUIDE.md  KEPCO_API_GUIDE.md  판례목록조회.md  판례본문조회.md
9.OpenAPI/prompts/: Market sencing Intelligence.txt  dart_report.txt  kepco_energy.txt  law_api.txt
