[project]
name = "AI_Agent_education"
version = "1.0"
description = "AI Agent education"
authors = [{ name = "이상현", email = "tkdgus990809@gmail.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-experimental>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-anthropic>=0.2,<0.3",
    "langchain-text-splitters>=0.3,<0.4",
    "langchain-elasticsearch>=0.3,<0.4",
    "langchain-upstage>=0.3,<0.4",
    "langchain-chroma>=0.1,<0.2",
    "langchain-cohere>=0.3,<0.4",
    "langchain-milvus>=0.1.1,<0.2",
    "langchain-google-genai>=2.0,<3",
    "langchain-huggingface>=0,<1",
    "langchain-teddynote>=0.3.21,<0.4",
    "langchainhub>=0.1.15,<0.2",
    "langgraph>=0,<1",
    "langsmith>=0.1,<0.2",
    "huggingface-hub>=0.25,<0.26",
    "openai>=1.34,<2",
    "google-generativeai>=0.8,<0.9",
    "deepl>=1.17.0,<2",
    "kiwipiepy>=0.17.1,<0.18",
    "konlpy>=0.6.0,<0.7",
    "keras>=3.0.5,<4",
    "torch>=2.2.2,<3",
    "torchvision>=0.17.2,<0.18",
    "faiss-cpu>=1.8.0,<2",
    "open-clip-torch>=2.24.0,<3",
    "pandas>=2.2.2,<3",
    "rank-bm25>=0.2.2,<0.3",
    "redis>=5.0.3,<6",
    "chromadb>=0.4.24,<0.5",
    "pymupdf>=1.24.1,<2",
    "pypdf>=4.2.0,<5",
    "pdfplumber>=0.11.1,<0.12",
    "pdfminer-six>=20231228,<20231229",
    "pymupdf4llm>=0.0,<0.1",
    "matplotlib>=3.8.4,<4",
    "streamlit>=1.32.2,<2",
    "audio-recorder-streamlit>=0.0.10,<0.0.11",
    "jupyter>=1.0.0,<2",
    "notebook>=7.1.2,<8",
    "beautifulsoup4>=4.12.0,<5",
    "schedule>=1.2.0,<2",
    "supabase>=2.0.0,<3",
    "python-docx>=1.1.0,<2",
    "plotly>=5.18.0,<6",
    "pyinstaller>=6.0.0,<7",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.7.4,<3",
    "lxml>=5.2.2,<6",
    "pillow>=10.3.0,<11",
    "lark>=1.1.9,<2",
    "ragas>=0.1.7,<0.2",
    "unstructured[all-docs]==0.10.19",
    "arxiv>=2.1.0,<3",
    "tiktoken>=0.7,<0.8",
    "tenacity==8.3.0",
    "pymilvus>=2.4.4,<3",
    "google-search-results>=2.4.2,<3",
    "protobuf==3.20.3",
    "sqlalchemy>=2.0.31,<3",
    "llama-index-core>=0.10.58,<0.11",
    "llama-parse>=0.4.9,<0.5",
    "llama-index-readers-file>=0.1.30,<0.2",
    "flashrank>=0.2.8,<0.3",
    "docx2txt>=0.8,<0.9",
    "nest-asyncio>=1.6.0,<2",
    "rapidocr-onnxruntime>=1.3.24,<2",
    "seaborn>=0.13.2,<0.14",
    "grandalf>=0.8,<0.9",
    "rouge-score>=0.1.2,<0.2",
    "langchain-ollama>=0.2.0,<0.3",
    "mypy>=1.11.2,<2",
    "pinecone>=5.3.1,<6",
    "reportlab>=4.2.5,<5",
    "faker>=33.1.0,<34",
    "pi-heif>=0.21.0,<0.22",
    "fastembed>=0.5.1,<0.6",
    "multion>=1.3.8,<2",
    "graphviz>=0.20.3,<0.21",
    "yfinance>=0.2.54,<0.3",
    "langchain-perplexity>=0.1.0,<0.2",
    "yt-dlp>=2025.12.8,<2026",
    "pydub>=0.25.1,<0.26",
    "librosa>=0.11.0,<0.12",
    "ruff",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
